Removed string concatenation in favor of String#formatted()